# jpeg-metadata-reader-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  demo.cpp
include/: application_segment.hpp  exif_segment.hpp  jfif_segment.hpp  metadata.hpp
source/: CMakeLists.txt  application_segment.cpp  jfif_segment.cpp
